--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,39 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+  display: flex;
+  justify-content: center;
+  border: 1px solid black;
+  height: 100vh;
+  margin: 1% 26%;
+}
+.tasks{
+  top: 0;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  border: rgb(247, 0, 0) solid 2px;
+  width: 100%;
+  height: 100px;
+  display: block
+}
+.task{
+  top: 0;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  border: rgb(36, 55, 165) solid 2px;
+  width: 100%;
+  display: block
+}
+#root{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
+h1{
+  text-align: center;
+  border: rgb(36, 165, 57) solid 2px;
+}
+.app{
+  width: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.urgent{
+  border-left: solid 4px yellow;
 }
